--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 		"build": "turbo run build",
 		"dev": "turbo run dev --parallel",
 		"ui:tailwind:watch": "cd packages/ui && npm run tailwind:watch",
-		"form-builder:dev": "cd apps/form-builder && npm run dev",
+		"builder:dev": "cd apps/builder && npm run dev",
 		"lint": "turbo run lint",
 		"clean": "turbo run clean && rm -rf node_modules",
 		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
