--- a/packages/schema-validator/package.json
+++ b/packages/schema-validator/package.json
@@ -2,10 +2,6 @@
 	"name": "@repo/schema-validator",
 	"version": "0.0.0",
 	"private": true,
-	"dependencies": {
-		"zod": "^3.24.1"
-	},
-	"devDependencies": {
-		"vitest": "^2.1.1"
-	}
+	"dependencies": {},
+	"devDependencies": {}
 }
