--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -12,6 +12,7 @@
 		"preview-storybook": "serve storybook-static",
 		"clean": "rm -rf .turbo && rm -rf node_modules",
 		"lint": "eslint ./stories/*.stories.tsx --max-warnings 0",
+		"build-storybook": "storybook build",
 		"tailwind:build": "tailwindcss build -i ./globals.css -o ./tailwind.css"
 	},
 	"dependencies": {
