added test cases

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -48,6 +48,7 @@
 	"scripts": {
 		"build": "tsup",
 		"dev": "tsup --watch",
+        "vitest:run": "vitest",
 		"lint": "eslint . --max-warnings 0",
 		"clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
 		"tailwind:build": "tailwindcss -i ./src/styles.css -o ./css/global.css",
