--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -7,7 +7,7 @@
 		"**/*.css"
 	],
 	"scripts": {
-		"dev": "storybook dev -p 6006",
+		"dev": "storybook dev -p 6006 --ci",
 		"build": "storybook build --docs",
 		"preview-storybook": "serve storybook-static",
 		"clean": "rm -rf .turbo && rm -rf node_modules",
